# QtComms

./: .gitignore  CMakeLists.txt  Makefile
backend/: CMakeLists.txt  RadarController.cpp  RadarController.h  main.cpp
comms/zeromq/: CMakeLists.txt  ZeroChannel.h  ZeroClient.h  ZeroClientQt.h
control/: CMakeLists.txt  ControlWindow.cpp  ControlWindow.h  ControlWindow.ui  main.cpp
proto/: CMakeLists.txt  common.proto  controls.proto
